--- a/Literatur.bib
+++ b/Literatur.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 @Report{SotE21,
   author      = {Fay Arjomandi and Matt Trifiro and Jacob Smith},
   date        = {2020-08-01},
@@ -224,6 +225,34 @@
   date   = {2022-03-27},
   title  = {KubeFed Releases Github},
   url    = {https://github.com/kubernetes-sigs/kubefed/releases},
+}
+
+@WWW{ke-docs-why,
+  author = {KubeEdge},
+  date   = {2020-11-27},
+  title  = {Why KubeEdge},
+  url    = {https://kubeedge.io/en/docs/kubeedge/},
+}
+
+@Report{ciliummesh,
+  author      = {Gokul, Chandra},
+  date        = {2020-03-10},
+  institution = {ITNEXT},
+  title       = {Kubernetes Multi-Cluster Networking -Cilium Cluster Mesh},
+  type        = {techreport},
+  url         = {https://itnext.io/kubernetes-multi-cluster-networking-cilium-cluster-mesh-bca0f5367d84},
+}
+
+@WWW{ke-cni-no,
+  author = {GsssC},
+  date   = {2020-05-14},
+  title  = {[Autonomic Kube-API Endpoint] feature Introduction},
+  url    = {https://github.com/kubeedge/kubeedge/issues/2760},
+}
+
+@WWW{,
+  author = {GsssC},
+  url    = {https://github.com/kubeedge/kubeedge/issues/1662},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
